syntax = "proto3";

import "pkg/protocol/core/base/base.proto";

package pbcrs;

option go_package = "github.com/TencentBlueking/bk-bcs/bcs-services/bcs-bscp/pkg/protocol/core/credential-scope;pbcrs";

message CredentialScopeAttachment {
  uint32 biz_id = 1;
  uint32 credential_id = 2;
}

message CredentialScopeList {
  uint32 id = 1;
  CredentialScopeSpec spec = 2;
  CredentialScopeAttachment attachment = 3;
  pbbase.Revision revision = 4;
}

message CredentialScopeSpec {
  string credential_scope = 1;
}

message UpdateScopeSpec {
  uint32 id = 1;
  string scope = 2;
}